app/src/main/java/com/example/androidtestcase/data/error/errors/NoInternetApiError.kt
package com.example.androidtestcase.data.error.errors

import com.example.androidtestcase.data.error.BaseApiError

class NoInternetApiError : BaseApiError()